fixed partial1 overlapping

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -35,7 +35,7 @@ body {
 }
 
 
-.mails {
+/*.mails {
   list-style: none;
 }
 
@@ -43,7 +43,7 @@ body {
   clear: both;
   height: 100px;
   padding-top: 15px;
-}
+}*/
 
 .thumb {
   float: left;
